进行判题服务开发、定义单独的 judgeService 类、使用策略模式优化尝试跑通流程

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,3 +100,6 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.zack.ZOJ.controller
+# 代码沙箱配置
+codesandbox:
+  type: remote
